# licker

./: Cargo.toml  LICENSE  README.md
src/: detect.rs  main.rs
src/detect/: app.rs  hw.rs  os.rs  pacman.rs
