[package]
name = "licker"
version = "0.1.0"
edition = "2021"
authors = ["mw"]
description = "Submit a list of installed arch packages."
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.3.4", features = ["derive", "cargo", "env"] }
libc = "0.2.147"
machineid-rs = "1.2.3"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = "1.0.173"
serde_json = "1.0.103"

[dev-dependencies]
assert_matches = "1.5.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary